--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Head 1</h1>
+    <p class="CSS">CSS STYLE</p>
+    <h1 class="Con">Head 1</h1>
     <h2>Head 2</h2>
     <h3>Head 3</h3>
     <h4>Head 4</h4>
